| Bug #4271 | prepared explain complex select, second executes crashes the server | ||
|---|---|---|---|
| Submitted: | 24 Jun 2004 14:56 | Modified: | 25 Jun 2004 14:38 |
| Reporter: | Matthias Leich | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Linux (linux) |
| Assigned to: | Oleksandr Byelkin | Target Version: | |
[24 Jun 2004 14:56]
Matthias Leich
[24 Jun 2004 14:58]
Matthias Leich
test case
Attachment: ml_err7.test (application/octet-stream, text), 7.08 KiB.
[24 Jun 2004 15:00]
Matthias Leich
server log
Attachment: master.err (application/octet-stream, text), 3.85 KiB.
[25 Jun 2004 10:38]
Oleksandr Byelkin
ChangeSet 1.1989 04/06/25 11:37:43 bell@sanja.is.com.ua +4 -0 fixed EXPLAIN behaviour with prepared statements (BUG#4271)
[25 Jun 2004 14:38]
Oleksandr Byelkin
Thank you for bugreport! Patch is pushed to source repository now.
