fixed EXPLAIN behaviour with prepared statements (BUG#4271)